--- a/contact-me/contact-me.css
+++ b/contact-me/contact-me.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
-  margin: 5% 5% 2.5% 2.5%;
+  margin: 5% 2.5% 5% 2.5%;
   /* margin: 10%; */
   /* padding: 10%; */
   border-style: solid;
