--- a/global.css
+++ b/global.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin: 5% 5% 2.5% 2.5%;
+  margin: 5% 2.5% 5% 2.5%;
   align-items: center;
   #lawrenzoName,
   #welcome {
@@ -34,14 +34,13 @@
   /* justify-content: space-evenly; */
   justify-content: center;
   background-color: purple;
-  margin: 5% 5% 2.5% 2.5%;
+  margin: 5% 2.5% 5% 2.5%;
   /* margin:0%; */
   border: 0%;
   padding: 0%;
-
+  width: 95%;
   /* justify-content: center; */
   /* align-items: center;  */
-  /* margin: 5%, 5%, 5%, 5%; */
 
   .nav-links {
     display: flex;
@@ -57,20 +56,23 @@
     /* height:50%; */
     .ul {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
+      /* ADJUSTING FOR TESTING, ^ MOVES THE THREE HEADER ELEMENTS*/
       list-style-type: none;
       background-color: blue;
+      justify-content: space-around;
       margin-block-start: 0;
       margin-block-end: 0;
       padding-inline-start: 0;
-      margin: 5% 5% 2.5% 2.5%;
+      margin: 5% 2.5% 5% 2.5%;
 
       /* margin: 50%; */
       border: 0%;
       padding: 0%;
       /* li { */
       /* margin: 5% 5% 2.5% 2.5%; */
-      justify-content: space-evenly;
+      /* justify-content: space-evenly; */
+      /* justify-content: center; */
       align-items: center;
       /* flex-wrap:wrap; */
 
@@ -78,6 +80,9 @@
         /* display: flex; */
         white-space: nowrap;
         background-color: green;
+        align-items: center;
+        justify-content: center;
+        /* white-space-collapse: 0; */
         /* align-items: center; */
         /* justify-content: space-evenly; */
         list-style-type: none;
@@ -117,7 +122,7 @@
 
 .hero {
   display: flex;
-  margin: 5% 5% 2.5% 2.5%;
+  margin: 5% 2.5% 5% 2.5%;
   align-items: center;
   border-style: solid;
   border-width: 5px;
@@ -130,7 +135,7 @@
 
 .footer {
   display: flex;
-  margin: 5% 5% 2.5% 2.5%;
+  margin: 5% 2.5% 5% 2.5%;
   align-items: center;
 
   /* gap: 15%; */
