--- a/projects/projects.css
+++ b/projects/projects.css
@@ -1,7 +1,7 @@
 .projects {
   display: flex;
   justify-content: center;
-  /* margin: 5% 5% 2.5% 2.5%; */
+  margin: 5% 2.5% 5% 2.5%;
   align-items: center;
   /* align-items: flex-start; */
   flex-wrap: wrap;
@@ -9,7 +9,7 @@
   border-width: 5px;
   border-color: black;
   .project-desc {
-    margin: 2.5% 2.5% 5% 5%;
+    /* margin: 5% 2.5% 5% 2.5%; */
     align-items: center;
     justify-content: center;
   }
